# vector-router

./: .gitignore  BENCHES.md  CODE_WALKTHROUGH.md  Cargo.toml  DECISIONS.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: grafana-dashboard.json
proto/vector_router/v1/: router.proto
samples/: math.rs  pool.rs
samples/clients/: README.md
samples/clients/python/: client.py  requirements.txt
samples/clients/typescript/: client.ts  package.json  tsconfig.json
src/: error.rs  lib.rs
